# 03_SMS_MARKETING

./: .cursorignore  .env.example  .gitignore  ACLARACION_CONTEO_CONTACTOS.md  BaseEstructura.md  CHANGELOG.md  README.md  RESUMEN_EJECUTIVO_REESTRUCTURACION.md  alembic.ini  docker-compose.new.yml  docker-compose.yml  pyproject.toml  requirements.txt  test_simple_db.py
Implementation/migracion-sistema-actual/: README.md  fase1-integracion-dashboard.md  fase2-expansion-database.md  fase3-validadores-core.md  fase4-lead-scoring.md  fase5-integracion-completa.md
Implementation/webdashboard/: README.md  fase-final.md  fase1.md  fase2.md  fase3.md
ImplementationSystem/: Fase1.md  Fase2.md  Fase3.md  ProjectRestructure.md
Infrastructure/Database/: init.sql  postgres.conf  redis.conf
Legacy/: README.md
Legacy/config/: create_tables.sql  docker-compose.minimal.yml
Legacy/migration_scripts/: analyze_source_db.py  auto_restart_and_continue.py  continue_optimized.py  continue_simple.py  continue_transformation.py  csv_direct_load.py  csv_robust_load.py  day4_migration_orchestrator.py  day4_quick_test.py  execute_sample_migration.py  final_csv_solution.py  final_migration_solution.py  fix_sample_migration.py  high_speed_migration.py  migration_manager.py  migration_test_copy.py  migration_validator.py  postgres_optimizer.py  practical_bulk_migration.py  python_csv_solution.py  real_migration_36M.py  real_migration_36M_fixed.py  robust_migration_final.py  test_sample_migration.py  ultimate_csv_solution.py  ultimate_migration_solution.py
Legacy/reports/: ANALISIS_OPTIMIZACION_VELOCIDAD.md  COMPARACION_ALTERNATIVAS_VELOCIDAD.md  DIA4_REPORTE_FINAL.md  DIFERENCIA_CONTACTOS_MIGRADOS_VS_VERIFIED.md  ESTRATEGIA_INTEGRACION_PROVEEDORES.md  Estructura.md  FASE_1_DETALLADA.md  FASE_2_COMPLETADA_REPORTE.md  FASE_2_PLAN_DETALLADO.md  GUIA_ACTUALIZACION_MASIVA.md  PLAN_IMPLEMENTACION.md  PLAN_IMPLEMENTACION_BOT.md  PROYECTO_LIMPIO_RESUMEN.md  PROYECTO_TELEGRAM_BOT_FINALIZADO.md  README.md  REPORTE_ANALISIS_IFT_COMPLETO.md  REPORTE_ESTRATEGIA_HIBRIDA_FINAL.md  REPORTE_FINAL_IFT_COMPLETO.md  REPORTE_FINAL_MIGRACION.md  REPORTE_INTEGRACION_IFT_EXITOSA.md  REPORTE_MEJORES_LADAS.md  REPORTE_PROCESAMIENTO_REAL_IFT.md  REPORTE_PROGRESO_ACTUALIZACION.md  REPORTE_TELEGRAM_BOT_COMPLETO.md  REPORTE_VALIDACION_IFT_CORRECTA.md  docker_monitored_update.py  efficient_mass_update.py  execute_mass_update.py  execute_ultra_safe_update.py  final_validation_complete.sql  fix_batch_function.sql  fix_ift_data_complete.py  (+15 more)
PlanImplementacion/: OpcionA_MigracionGradual.md  OpcionB_ImplementacionCompleta.md  OpcionC_ValidadorEspecifico.md  OpcionD_WebDashboard.md  README.md
WebDashboard/: .gitignore  package-lock.json  package.json  tailwind.config.js  test-icons.js  vite.config.ts  vitest.config.ts
app/: __init__.py  main.py
backups/: LADAS2025.CSV
bot/: .cursorignore  CHANGELOG.md  Dockerfile  README.md  check_db.py  check_internal_db.py  check_royal_db.py  config.py  docker-compose.stack.yml  list_tables.py  network_test.py  requirements.txt  telegram_production.py  test_config.py
data/: mejores_ladas.csv  mejores_ladas_enriquecido.csv
docker/: Dockerfile  Dockerfile.worker  init-db.sql  nginx.conf  postgres.conf  redis.conf
migrations/: env.py  env_backup.py  simple_env.py
reports/: ladas_faltantes_reporte.md  security_validation_report.md  validation_system_final_status.md  validation_system_implementation_report.md  xlsx_content_11_chars_update.md  xlsx_content_truncation_report.md
scripts/: analyze_database.py  analyze_full_db_ift.sql  analyze_proveedores_csv.py  analyze_proveedores_detailed.py  check_fijo_data.py  complete_ladas_update.py  continue_from_317.sql  create_validation_numbers_table.sql  execute_ladas_mass_update.py  execute_ladas_robust.py  execute_ladas_simple.py  ladas_mass_update_strategy.sql  load_ladas_reference.py  load_mejores_ladas.py  resume_lote_316.sql  test_dashboard_integration.py  test_ladas_concept.py  test_xlsx_validation.py
tests/: test_contact_service_debug.py  test_export_debug.py  test_ift_connection.py  validate_contacts.py
(+127 files in other folders)
